--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,4 +1,17 @@
 .section-products {
+    & .container {
+        padding-top: 121px;
+        padding-bottom: 98px;
+
+        @media screen and  (min-width: 768px) {
+            padding-top: 122px;
+            padding-bottom: 112px;
+        }
+        @media screen and  (min-width: 1280px) {
+            padding-top: 127px;
+            padding-bottom: 119px;
+        }
+    }
 
     &__label {
     display: block;
@@ -12,7 +25,15 @@
     color: $label-color;
     margin-bottom: 15px;
 
+    @media screen and  (min-width: 768px) {
+        font-size: 26px;
+        line-height: 1.38;
     }
+    @media screen and  (min-width: 1280px) {
+        font-size: 30px;
+        line-height: 1.3;
+    }
+}
     &__title {
     font-family: $secondary-font;
     font-style: normal;
@@ -24,18 +45,69 @@
     color:$accent-color;
     margin-bottom: 144px;
 
-}
+    @media screen and  (min-width: 768px) {
+        font-size: 48px;
+        line-height: 1.14;
+        margin-bottom: 150px;
+    }
+    @media screen and  (min-width: 1280px) {
+        font-size: 58px;
+        line-height: 1.13;
+        margin-bottom: 259px;
+    }
+    }
 }
 .products {
+
     @media screen and  (min-width: 768px) {
         display: flex;
     }
 
     &__item {
-        max-width: 335px;
+        display: block;
+        height: 485px;
         border-radius: 24px;
-        padding: 0 40px;
+        padding-top: 160px;
+        padding-left: 40px;
+        padding-right: 40px;
         position: relative;
+        
+
+
+        @media screen and  (min-width: 768px) {
+            padding-top: 152px;
+            padding-right: 10px;
+            padding-left: 10px;
+            height: 485px;
+            .products {
+                &__item {
+                    margin-bottom: 0;
+                    padding-bottom: 40px;
+                }
+
+                
+            }
+            
+        }
+        &:not(:last-child) {
+            margin-bottom: 130px;
+
+            @media screen and  (min-width: 768px) {
+                margin-bottom: 0;
+            }
+            
+        }
+
+
+        @media screen and  (min-width: 1280px) {
+            flex-basis: calc(100% / 3 - 28px);
+            padding-top: 163px;
+            padding-right: 40px;
+            padding-left: 40px;
+            padding-bottom: 50px;
+            height: 525px;
+
+        }
 
         @media screen and  (min-width: 768px) {
             &:not(:last-child) {
@@ -44,50 +116,102 @@
         }
     }
 
-    &__item:not(:last-child) {
-        margin-bottom: 130px;
 
-    }
+
     &__item:first-child::before {
         content: "";
         position: absolute;
-        top: -140px;
+        top: -23%;
         left: 50%;
-        transform: translatex(-50%);
+        transform: translateX(-50%);
         display: block;
         width: 250px;
         height: 250px;
         background-image: url(../images/products/mobile/mobile-1.png);
+        background-image: url(../images/products/mobile/mobile-1@2x.png);
         background-repeat: no-repeat;
         background-size: contain;
+
+        @media screen and  (min-width: 768px) {
+            background-image: url(../images/products/tablet/tablet-1.png);
+            background-image: url(../images/products/tablet/tablet-1@2x.png);
+            top: -20%;
+            width: 220px;
+            height: 226px;
+
+        }
+        @media screen and  (min-width: 1280px) {
+            background-image: url(../images/products/desctop/desctop-1.png);
+            background-image: url(../images/products/desctop/desctop-1@2x.png);
+            top: -36%;
+            width: 335px;
+            height: 335px;
+        }
+
     
     }
     &__item:nth-child(2)::before {
         content: "";
         position: absolute;
-        top: -120px;
+        top: -23%;
         left: 50%;
         transform: translatex(-50%);
         display: block;
         width: 250px;
         height: 250px;
         background-image: url(../images/products/mobile/mobile-2.png);
+        background-image: url(../images/products/mobile/mobile-2@2x.png);
         background-repeat: no-repeat;
         background-size: contain;
+
+        @media screen and  (min-width: 768px) {
+            background-image: url(../images/products/tablet/tablet-2.png);
+            background-image: url(../images/products/tablet/tablet-2@2x.png);
+            top: -20%;
+            width: 220px;
+            height: 226px;
+
+        }
+        @media screen and  (min-width: 1280px) {
+            background-image: url(../images/products/desctop/desctop-2.png);
+            background-image: url(../images/products/desctop/desctop-2@2x.png);
+            top: -36%;
+            width: 335px;
+            height: 335px;
+        }
     
     }
     &__item:nth-child(3)::before {
         content: "";
         position: absolute;
-        top: -110px;
+        top: -23%;
         left: 50%;
         transform: translatex(-50%);
         display: block;
         width: 250px;
         height: 250px;
         background-image: url(../images/products/mobile/mobile-3.png);
+        background-image: url(../images/products/mobile/mobile-3@2x.png);
         background-repeat: no-repeat;
         background-size: contain;
+
+        @media screen and  (min-width: 768px) {
+            background-image: url(../images/products/tablet/tablet-3.png);
+            background-image: url(../images/products/tablet/tablet-3@2x.png);
+            top: -20%;
+            width: 220px;
+            height: 226px;
+
+        }
+        @media screen and  (min-width: 1280px) {
+            background-image: url(../images/products/desctop/desctop-3.png);
+            background-image: url(../images/products/desctop/desctop-3@2x.png);
+            top: -36%;
+            width: 335px;
+            height: 335px;
+        }
+
+
 
     }
 
@@ -104,8 +228,7 @@
     }
 
     &__subtitle {
-        padding-top: 160px;
-        padding-bottom: 60px;
+        margin-bottom: 66px;
         font-family: $secondary-font;
         font-style: normal;
         font-weight: normal;
@@ -115,26 +238,52 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: $primary-text-color;
+        position: relative;
+
+        @media screen and  (min-width: 768px) {
+            margin-bottom: 66px;
+
+        }
+        @media screen and  (min-width: 1280px) {
+            margin-bottom: 70px;
+            font-size: 30px;
+            
+        }
     }
 
     &__description {
+        height: 124px;
+        overflow: hidden;
         font-family: $main-font;
         font-style: normal;
         font-weight: bold;
         font-size: 14px;
-        line-height: 1.5;    
+        line-height: 152%;    
         text-align: center;
         letter-spacing: 0.04em;
         color: $primary-text-color;
-        padding-bottom: 30px;
+        margin-bottom: 30px;
         position: relative;
+
+        @media screen and  (min-width: 768px) {
+            margin-bottom: 40px;
+            
+        }
+
+
+        @media screen and  (min-width: 1280px) {
+            height: 106px;
+            font-size: 16px;
+            margin-bottom: 62px;
+            line-height: 176%;
+        }
     }
-    &__description::before {
+    &__subtitle::after {
         content: "";
         position: absolute;
         width: 26px;
         height: 6px;
-        top: -30px;
+        top: 225%;
         left: 50%;
         transform: translateX(-50%);
         background-image: url(./../images/products/Group.svg);
@@ -149,7 +298,10 @@
         height: 40px;
         background-color: $primary-text-color;
         border-radius: 50%;
-        margin-bottom: 40px;
+        
+    }
+    &__icon {
+        fill: $accent-color;
     }
 
 }
