Присвоил атрибут id вместо name

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products" name="products">
+<section class="products" id="products">
   <div class="container">
     <label class="products-label">
       100% Natural
