--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -2,8 +2,10 @@
     background: #FFF5F6;
     background-image: url("../images/about/background-320-1.png"); 
     background-repeat: no-repeat;
-    background-position: 0% 92%;
+    background-position: 0% 88%;
     background-size: contain;
+    padding-top: 125px;
+    padding-bottom: 39px;
 
     @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -14,12 +16,14 @@
 
     @media screen and (min-width: 768px) {
         background-image: none;
+        padding-bottom: 67px;
     }
 
 
     @media screen and (min-width: 1280px) {
         background-image: url("../images/about/background-1280-1.png"); 
-        background-position: 0% 120%;
+        background-position: 0% 100%;
+        padding-bottom: 138px;
     
 
         @media screen and (min-device-pixel-ratio: 2),
@@ -42,32 +46,46 @@
     
     @media screen and (min-width: 768px) {
         display: block;
+        position: relative;
     }
 }
 
 
 .about {
     display: block;
-
+    
     @media screen and (min-width: 768px) {
         display: flex;
+        flex-direction: column;
+        align-items: flex-end;
     } 
 }
 
 
-.about__image {
+.about::before {
+    content: url("../images/about/mobile-1.png");
+
+    // @media screen and (min-device-pixel-ratio: 2),
+    // screen and (min-resolution: 192dpi),
+    // screen and (min-resolution: 2dppx) {
+    //     content: url("../images/about/mobile-1@2x.png"); 
+    // }
 
     @media screen and (min-width: 768px) {
-        width: 50%;
+        content: url("../images/about/tablet-1.png");
+        position: absolute;
+        left: 20px;  
+        top: 155px; 
     }
-}
+
+    @media screen and (min-width: 1280px) {
+        content: url("../images/about/desctop-1.png");
+        position: absolute;
+        left: 18px;  
+        top: 190px; 
+    }
 
 
-.about__description {
-   
-    @media screen and (min-width: 768px) { 
-        width: 50%;
-    }
 }
 
 
@@ -81,7 +99,8 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #D41443;
-    margin-top: 25px;
+    margin-bottom: 30px;
+    
 
     @media screen and (min-width: 768px) {
         margin-bottom: 50px;
@@ -93,6 +112,7 @@
         font-size: 58px;
         line-height: 66px;
         letter-spacing: 0.06em;
+        margin-bottom: 120px;
     }
 }
 
@@ -106,7 +126,7 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFA5BA;
-    padding-top: 125px;
+    margin-bottom: 25px;
 
     @media screen and (min-width: 768px) {
         font-size: 26px;
@@ -117,6 +137,7 @@
         font-size: 30px;
         line-height: 34px;
         letter-spacing: 0.04em;
+        
     }
 }
 
@@ -138,10 +159,11 @@
     font-size: 12px;
     line-height: 19px;
     color: #000000; 
-    margin-top: 50px;
+    margin-top: 46px;
     padding: 0 32px;
 
     @media screen and (min-width: 768px) {
+        width: 50%;
         font-size: 14px;
         line-height: 25px;
         padding: 0 14px;
@@ -152,6 +174,8 @@
         line-height: 28px;
         letter-spacing: 0.04em;
         padding-left: 68px;
+        padding-right: 0;
+        margin-top: 0px;
     } 
 }
 
@@ -167,10 +191,12 @@
     padding: 0 35px;
 
     @media screen and (min-width: 768px) {
+        width: 50%;
         font-size: 14px;
         line-height: 25px;
         letter-spacing: 0.04em;
         padding-left: 14px;
+        padding-right: 0;
     }
 
 
@@ -179,6 +205,7 @@
         line-height: 27px;
         letter-spacing: 0.04em;
         padding-left: 68px;
+        margin-bottom: 35px;
     }
 }
 
@@ -195,10 +222,13 @@
     padding: 0 35px;
 
     @media screen and (min-width: 768px) {
+        width: 50%;
         font-size: 14px;
         line-height: 25px;
         letter-spacing: 0.04em;
-        padding-left: 14px;
+        padding-left: 16px;
+        padding-right: 0;
+        margin-bottom: 60px;
     }
 
     @media screen and (min-width: 1280px) {
@@ -206,6 +236,7 @@
         line-height: 27px;
         letter-spacing: 0.04em;
         padding-left: 68px;
+        margin-bottom: 40px;
     }
 }
 
@@ -219,17 +250,13 @@
 
     
     @media screen and (min-width: 768px) {
-        margin-right: 90px;
-        margin-top: 60px;
+        margin-right: 96px;
+        margin-top: 0;
     }
        
 
     @media screen and (min-width: 1280px) {
-        display: flex;
-        
-        justify-content: center;
-        margin-top: 45px;
-        margin-right: 160px;
+        margin-right: 216px;
     }
 }
 
