--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -114,6 +114,10 @@
                 margin-right: 20px;
             }
         }
+        @media screen and  (min-width: 1280px) {
+            &:not(:last-child) {
+                margin-right: 24px;
+            }
     }
 
 
@@ -267,6 +271,7 @@
 
         @media screen and  (min-width: 768px) {
             margin-bottom: 40px;
+            line-height: 176%; 
             
         }
 
