--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,19 +1,19 @@
 .section-products {
-    & .container {
-        padding-top: 121px;
-        padding-bottom: 98px;
+  & .container {
+    padding-top: 121px;
+    padding-bottom: 98px;
 
-        @media screen and  (min-width: 768px) {
-            padding-top: 122px;
-            padding-bottom: 112px;
-        }
-        @media screen and  (min-width: 1280px) {
-            padding-top: 127px;
-            padding-bottom: 119px;
-        }
+    @media screen and (min-width: 768px) {
+      padding-top: 122px;
+      padding-bottom: 112px;
     }
+    @media screen and (min-width: 1280px) {
+      padding-top: 127px;
+      padding-bottom: 119px;
+    }
+  }
 
-    &__label {
+  &__label {
     display: block;
     font-family: $secondary-font;
     font-style: normal;
@@ -25,16 +25,16 @@
     color: $label-color;
     margin-bottom: 15px;
 
-    @media screen and  (min-width: 768px) {
-        font-size: 26px;
-        line-height: 1.38;
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
+      line-height: 1.38;
     }
-    @media screen and  (min-width: 1280px) {
-        font-size: 30px;
-        line-height: 1.3;
+    @media screen and (min-width: 1280px) {
+      font-size: 30px;
+      line-height: 1.3;
     }
-}
-    &__title {
+  }
+  &__title {
     font-family: $secondary-font;
     font-style: normal;
     font-weight: normal;
@@ -42,271 +42,246 @@
     line-height: 1.14;
     text-align: center;
     text-transform: uppercase;
-    color:$accent-color;
+    color: $accent-color;
     margin-bottom: 144px;
 
-    @media screen and  (min-width: 768px) {
-        font-size: 48px;
-        line-height: 1.14;
-        margin-bottom: 150px;
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+      line-height: 1.14;
+      margin-bottom: 150px;
     }
-    @media screen and  (min-width: 1280px) {
-        font-size: 58px;
-        line-height: 1.13;
-        margin-bottom: 259px;
+    @media screen and (min-width: 1280px) {
+      font-size: 58px;
+      line-height: 1.13;
+      margin-bottom: 259px;
     }
-    }
+  }
 }
 .products {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 
-    @media screen and  (min-width: 768px) {
-        display: flex;
+  &__item {
+    display: block;
+    height: 485px;
+    border-radius: 24px;
+    padding-top: 160px;
+    padding-left: 40px;
+    padding-right: 40px;
+    position: relative;
+
+    @media screen and (min-width: 768px) {
+      padding-top: 152px;
+      padding-right: 10px;
+      padding-left: 10px;
+      height: 485px;
+      .products {
+        &__item {
+          margin-bottom: 0;
+          padding-bottom: 40px;
+        }
+      }
+    }
+    &:not(:last-child) {
+      margin-bottom: 130px;
+
+      @media screen and (min-width: 768px) {
+        margin-bottom: 0;
+      }
     }
 
-    &__item {
-        display: block;
-        height: 485px;
-        border-radius: 24px;
-        padding-top: 160px;
-        padding-left: 40px;
-        padding-right: 40px;
-        position: relative;
-        
-
-
-        @media screen and  (min-width: 768px) {
-            padding-top: 152px;
-            padding-right: 10px;
-            padding-left: 10px;
-            height: 485px;
-            .products {
-                &__item {
-                    margin-bottom: 0;
-                    padding-bottom: 40px;
-                }
-
-                
-            }
-            
-        }
-        &:not(:last-child) {
-            margin-bottom: 130px;
-
-            @media screen and  (min-width: 768px) {
-                margin-bottom: 0;
-            }
-            
-        }
-
-
-        @media screen and  (min-width: 1280px) {
-            flex-basis: calc(100% / 3 - 28px);
-            padding-top: 163px;
-            padding-right: 40px;
-            padding-left: 40px;
-            padding-bottom: 50px;
-            height: 525px;
-
-        }
-
-        @media screen and  (min-width: 768px) {
-            &:not(:last-child) {
-                margin-right: 20px;
-            }
-        }
-        @media screen and  (min-width: 1280px) {
-            &:not(:last-child) {
-                margin-right: 24px;
-            }
+    @media screen and (min-width: 1280px) {
+      flex-basis: calc(100% / 3 - 28px);
+      padding-top: 163px;
+      padding-right: 40px;
+      padding-left: 40px;
+      padding-bottom: 50px;
+      height: 525px;
     }
 
-
-
-    &__item:first-child::before {
-        content: "";
-        position: absolute;
-        top: -23%;
-        left: 50%;
-        transform: translateX(-50%);
-        display: block;
-        width: 250px;
-        height: 250px;
-        background-image: url(../images/products/mobile/mobile-1.png);
-        background-image: url(../images/products/mobile/mobile-1@2x.png);
-        background-repeat: no-repeat;
-        background-size: contain;
-
-        @media screen and  (min-width: 768px) {
-            background-image: url(../images/products/tablet/tablet-1.png);
-            background-image: url(../images/products/tablet/tablet-1@2x.png);
-            top: -20%;
-            width: 220px;
-            height: 226px;
-
-        }
-        @media screen and  (min-width: 1280px) {
-            background-image: url(../images/products/desctop/desctop-1.png);
-            background-image: url(../images/products/desctop/desctop-1@2x.png);
-            top: -36%;
-            width: 335px;
-            height: 335px;
-        }
-
-    
+    @media screen and (min-width: 768px) {
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
     }
-    &__item:nth-child(2)::before {
-        content: "";
-        position: absolute;
-        top: -23%;
-        left: 50%;
-        transform: translatex(-50%);
-        display: block;
-        width: 250px;
-        height: 250px;
-        background-image: url(../images/products/mobile/mobile-2.png);
-        background-image: url(../images/products/mobile/mobile-2@2x.png);
-        background-repeat: no-repeat;
-        background-size: contain;
-
-        @media screen and  (min-width: 768px) {
-            background-image: url(../images/products/tablet/tablet-2.png);
-            background-image: url(../images/products/tablet/tablet-2@2x.png);
-            top: -20%;
-            width: 220px;
-            height: 226px;
-
-        }
-        @media screen and  (min-width: 1280px) {
-            background-image: url(../images/products/desctop/desctop-2.png);
-            background-image: url(../images/products/desctop/desctop-2@2x.png);
-            top: -36%;
-            width: 335px;
-            height: 335px;
-        }
-    
+    @media screen and (min-width: 1280px) {
+      &:not(:last-child) {
+        margin-right: 24px;
+      }
     }
-    &__item:nth-child(3)::before {
-        content: "";
-        position: absolute;
-        top: -23%;
-        left: 50%;
-        transform: translatex(-50%);
-        display: block;
-        width: 250px;
-        height: 250px;
-        background-image: url(../images/products/mobile/mobile-3.png);
-        background-image: url(../images/products/mobile/mobile-3@2x.png);
-        background-repeat: no-repeat;
-        background-size: contain;
+  }
 
-        @media screen and  (min-width: 768px) {
-            background-image: url(../images/products/tablet/tablet-3.png);
-            background-image: url(../images/products/tablet/tablet-3@2x.png);
-            top: -20%;
-            width: 220px;
-            height: 226px;
+  &__item:first-child::before {
+    content: '';
+    position: absolute;
+    top: -23%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    width: 250px;
+    height: 250px;
+    background-image: url(../images/products/mobile/mobile-1.png);
+    background-image: url(../images/products/mobile/mobile-1@2x.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 
-        }
-        @media screen and  (min-width: 1280px) {
-            background-image: url(../images/products/desctop/desctop-3.png);
-            background-image: url(../images/products/desctop/desctop-3@2x.png);
-            top: -36%;
-            width: 335px;
-            height: 335px;
-        }
-
-
-
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/products/tablet/tablet-1.png);
+      background-image: url(../images/products/tablet/tablet-1@2x.png);
+      top: -20%;
+      width: 220px;
+      height: 226px;
     }
-
-    &__item:first-child {
-        background: $hero-bg-color;
+    @media screen and (min-width: 1280px) {
+      background-image: url(../images/products/desctop/desctop-1.png);
+      background-image: url(../images/products/desctop/desctop-1@2x.png);
+      top: -36%;
+      width: 335px;
+      height: 335px;
     }
+  }
+  &__item:nth-child(2)::before {
+    content: '';
+    position: absolute;
+    top: -23%;
+    left: 50%;
+    transform: translatex(-50%);
+    display: block;
+    width: 250px;
+    height: 250px;
+    background-image: url(../images/products/mobile/mobile-2.png);
+    background-image: url(../images/products/mobile/mobile-2@2x.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 
-    &__item:nth-child(2) {
-        background: $secondary-product-bg-color;
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/products/tablet/tablet-2.png);
+      background-image: url(../images/products/tablet/tablet-2@2x.png);
+      top: -20%;
+      width: 220px;
+      height: 226px;
     }
-
-    &__item:nth-child(3) {
-        background: $third-product-bg-color;
+    @media screen and (min-width: 1280px) {
+      background-image: url(../images/products/desctop/desctop-2.png);
+      background-image: url(../images/products/desctop/desctop-2@2x.png);
+      top: -36%;
+      width: 335px;
+      height: 335px;
     }
+  }
+  &__item:nth-child(3)::before {
+    content: '';
+    position: absolute;
+    top: -23%;
+    left: 50%;
+    transform: translatex(-50%);
+    display: block;
+    width: 250px;
+    height: 250px;
+    background-image: url(../images/products/mobile/mobile-3.png);
+    background-image: url(../images/products/mobile/mobile-3@2x.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 
-    &__subtitle {
-        margin-bottom: 66px;
-        font-family: $secondary-font;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 1.15;
-        text-align: center;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        color: $primary-text-color;
-        position: relative;
-
-        @media screen and  (min-width: 768px) {
-            margin-bottom: 66px;
-
-        }
-        @media screen and  (min-width: 1280px) {
-            margin-bottom: 70px;
-            font-size: 30px;
-            
-        }
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/products/tablet/tablet-3.png);
+      background-image: url(../images/products/tablet/tablet-3@2x.png);
+      top: -20%;
+      width: 220px;
+      height: 226px;
     }
-
-    &__description {
-        height: 124px;
-        overflow: hidden;
-        font-family: $main-font;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 152%;    
-        text-align: center;
-        letter-spacing: 0.04em;
-        color: $primary-text-color;
-        margin-bottom: 30px;
-        position: relative;
-
-        @media screen and  (min-width: 768px) {
-            margin-bottom: 40px;
-            line-height: 176%; 
-            
-        }
-
-
-        @media screen and  (min-width: 1280px) {
-            height: 106px;
-            font-size: 16px;
-            margin-bottom: 62px;
-            line-height: 176%;
-        }
+    @media screen and (min-width: 1280px) {
+      background-image: url(../images/products/desctop/desctop-3.png);
+      background-image: url(../images/products/desctop/desctop-3@2x.png);
+      top: -36%;
+      width: 335px;
+      height: 335px;
     }
-    &__subtitle::after {
-        content: "";
-        position: absolute;
-        width: 26px;
-        height: 6px;
-        top: 225%;
-        left: 50%;
-        transform: translateX(-50%);
-        background-image: url(./../images/products/Group.svg);
+  }
+
+  &__item:first-child {
+    background: $hero-bg-color;
+  }
+
+  &__item:nth-child(2) {
+    background: $secondary-product-bg-color;
+  }
+
+  &__item:nth-child(3) {
+    background: $third-product-bg-color;
+  }
+
+  &__subtitle {
+    margin-bottom: 66px;
+    font-family: $secondary-font;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $primary-text-color;
+    position: relative;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 66px;
     }
-    
-    &__link {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        width: 40px;
-        height: 40px;
-        background-color: $primary-text-color;
-        border-radius: 50%;
-        
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 70px;
+      font-size: 30px;
     }
-    &__icon {
-        fill: $accent-color;
+  }
+
+  &__description {
+    height: 124px;
+    overflow: hidden;
+    font-family: $main-font;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 152%;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: $primary-text-color;
+    margin-bottom: 30px;
+    position: relative;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 40px;
+      line-height: 176%;
     }
 
+    @media screen and (min-width: 1280px) {
+      height: 106px;
+      font-size: 16px;
+      margin-bottom: 62px;
+      line-height: 176%;
+    }
+  }
+  &__subtitle::after {
+    content: '';
+    position: absolute;
+    width: 26px;
+    height: 6px;
+    top: 225%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: url(./../images/products/Group.svg);
+  }
+
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 40px;
+    height: 40px;
+    background-color: $primary-text-color;
+    border-radius: 50%;
+  }
+  &__icon {
+    fill: $accent-color;
+  }
 }
