--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -43,12 +43,16 @@
   color: $primary-text-color;
   background-color: $accent-color;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 8px;
   line-height: 1.28;
 
   &:hover,
   &:focus {
     background-color: $secondary-btn-hover;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 8px;
   }
 }
 
