--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -39,7 +39,7 @@
   height: 12px;
   width: 20px;
 }
-.button--arrow-theme-white {
+.header .button--arrow-theme-white {
   display: none;
 }
 .nav {
