Updated buttons in about, slider

--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,20 +1,21 @@
 .section-reviews {
   padding-top: 80px;
-  padding-bottom: 86px;
+  padding-bottom: 97px;
 
   @media screen and (min-width: 768px) {
     padding-top: 121px;
-    padding-bottom: 119px;
+    padding-bottom: 126px;
   }
 
   @media screen and (min-width: 1280px) {
     padding-top: 123px;
-    padding-bottom: 132px;
+    padding-bottom: 140px;
   }
 }
 
 .reviews {
   width: 280px;
+  margin: 0 auto;
 
   @media screen and (min-width: 768px) {
     width: 620px;
@@ -29,7 +30,7 @@
 }
 
 .reviews__image {
-  display: inline-block;
+  margin: 0 auto;
   max-width: 85px;
   margin-bottom: 29px;
 
@@ -109,7 +110,7 @@
     content: '';
     position: absolute;
     bottom: -54px;
-    left: 76px;
+    left: 70px;
     display: block;
     width: 32px;
     height: 4px;
@@ -117,11 +118,11 @@
 
     @media screen and (min-width: 768px) {
       bottom: -58px;
-      left: 240px;
+      left: 235px;
     }
     @media screen and (min-width: 1280px) {
       bottom: -34px;
-      left: 385px;
+      left: 390px;
     }
   }
 }
@@ -162,6 +163,43 @@
   background-repeat: no-repeat;
   border-radius: 0%;
 }
-.slick-slide img {
-  display: inline-block;
+
+// BUTTON STYLES
+
+.slick-prev,
+.slick-next {
+  top: 9%;
+  background: #d9d9d9;
+  border-radius: 50%;
+  width: 20px;
+  height: 19px;
+}
+
+.slick-prev {
+  left: 36px;
+}
+.slick-next {
+  right: 36px;
+}
+
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  background: #d31342;
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 768px) {
+  .slick-prev,
+  .slick-next {
+    top: 56%;
+  }
+
+  .slick-prev {
+    left: -44px;
+  }
+  .slick-next {
+    right: -44px;
+  }
 }
