--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -22,7 +22,7 @@
 
     @media screen and (min-width: 1280px) {
         background-image: url("../images/about/background-1280-1.png"); 
-        background-position: 0% 100%;
+        background-position: 0% 104%;
         padding-bottom: 138px;
     
 
@@ -63,28 +63,52 @@
 
 
 .about::before {
-    content: url("../images/about/mobile-1.png");
+    content: "";
+    display: block;
+    background-image: url("../images/about/mobile-1.png");
+    width: 280px;
+    height: 280px;
+    background-size: 280px 280px;
 
-    // @media screen and (min-device-pixel-ratio: 2),
-    // screen and (min-resolution: 192dpi),
-    // screen and (min-resolution: 2dppx) {
-    //     content: url("../images/about/mobile-1@2x.png"); 
-    // }
+        @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+            background-image: url("../images/about/mobile-1@2x.png"); 
+    }
 
     @media screen and (min-width: 768px) {
-        content: url("../images/about/tablet-1.png");
+        content: "";
+        background-image: url("../images/about/tablet-1.png");
+        width: 340px;
+        height: 340px;
         position: absolute;
+        background-size: 340px 340px;
         left: 20px;  
         top: 155px; 
+
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url("../images/about/tablet-1@2x.png");
+            }
     }
 
     @media screen and (min-width: 1280px) {
-        content: url("../images/about/desctop-1.png");
+        content: "";
+        background-image: url("../images/about/desctop-1.png");
+        background-size: 516px 516px;
         position: absolute;
+        width: 516px;
+        height: 516px;
         left: 18px;  
         top: 190px; 
-    }
 
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url("../images/about/desctop-1@2x.png");
+            }
+    }
 
 }
 
@@ -112,7 +136,7 @@
         font-size: 58px;
         line-height: 66px;
         letter-spacing: 0.06em;
-        margin-bottom: 120px;
+        margin-bottom: 102px;
     }
 }
 
@@ -138,6 +162,7 @@
         font-size: 30px;
         line-height: 34px;
         letter-spacing: 0.04em;
+        margin-bottom: 17px;
         
     }
 }
